# docs/swagger.yaml
@@ -57,6 +57,21 @@ definitions:
       information_type_id:
         type: integer
     type: object
+  MenuPayloads.InformationSelectResponses:
+    properties:
+      information_body_content:
+        items:
+          $ref: '#/definitions/MenuPayloads.InformationBodyDetail'
+        type: array
+      information_created_by_user_id:
+        type: integer
+      information_date_created:
+        type: string
+      information_header:
+        type: string
+      information_type_id:
+        type: integer
+    type: object
   MenuPayloads.InformationUpdatePayloads:
     properties:
       information_body_content:
@@ -254,7 +269,7 @@ info:
   version: "1.0"
 paths:
   /api/bookmark:
-    post:
+    delete:
       consumes:
       - application/json
       description: Remove Bookmark
@@ -305,6 +320,85 @@ paths:
       summary: Remove Bookmark
       tags:
       - Bookmark
+    post:
+      consumes:
+      - application/json
+      description: Add New BookMark
+      parameters:
+      - description: user_id
+        in: query
+        name: user_id
+        required: true
+        type: integer
+      - description: information_id
+        in: query
+        name: information_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Bookmark'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorResponses'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/responses.ErrorResponses'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/responses.ErrorResponses'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ErrorResponses'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/responses.ErrorResponses'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ErrorResponses'
+      security:
+      - BearerAuth: []
+      summary: Add New BookMark
+      tags:
+      - Bookmark
+  /api/bookmark/{user_id}/{information_type_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get bookmark by Id
+      parameters:
+      - description: user_id
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      - description: information_type_id
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/MenuPayloads.InformationSelectResponses'
+      security:
+      - BearerAuth: []
+      summary: Get bookmark by Id
+      tags:
+      - Calendar
   /api/calendar:
     patch:
       consumes:
